# picture-service

./: .env  .env.docker  .env.testing  .flake8  .gitignore  Dockerfile  LICENSE  README.md  asgi.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  wsgi.py
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: ci.yml
service/: __init__.py  configs.py  dependencies.py  errors.py  main.py  routes.py  schemas.py  services.py
service/common/: __init__.py
service/routers/: __init__.py  general.py  pictures.py
service/templates/: index.html
service/templates/components/: navbar.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_integration_main.py  test_integration_routes.py
tests/integration/routers/: __init__.py  test_integration_general.py  test_integration_pictures.py
tests/unit/: __init__.py  conftest.py  test_config.py  test_errors.py  test_routes.py  test_schemas.py  test_service.py
tests/unit/routers/: __init__.py  test_general.py  test_picures.py
